@@ -63,104 +63,104 @@ class Reviewer(Committer):
 
 
 committers_unable_to_review = [
-    Committer("Aaron Boodman", "aa@chromium.org"),
-    Committer("Adam Langley", "agl@chromium.org"),
+    Committer("Aaron Boodman", "aa@chromium.org", "aboodman"),
+    Committer("Adam Langley", "agl@chromium.org", "agl"),
     Committer("Albert J. Wong", "ajwong@chromium.org"),
     Committer("Alejandro G. Castro", ["alex@igalia.com", "alex@webkit.org"]),
-    Committer("Alexander Kellett", ["lypanov@mac.com", "a-lists001@lypanov.net", "lypanov@kde.org"]),
+    Committer("Alexander Kellett", ["lypanov@mac.com", "a-lists001@lypanov.net", "lypanov@kde.org"], "lypanov"),
     Committer("Alexander Pavlov", "apavlov@chromium.org"),
     Committer("Andre Boule", "aboule@apple.com"),
-    Committer("Andrew Wellington", ["andrew@webkit.org", "proton@wiretapped.net"]),
-    Committer("Andras Becsi", "abecsi@webkit.org"),
-    Committer("Anthony Ricaud", "rik@webkit.org"),
-    Committer("Anton Muhin", "antonm@chromium.org"),
-    Committer("Antonio Gomes", "tonikitoo@webkit.org"),
-    Committer("Ben Murdoch", "benm@google.com"),
-    Committer("Benjamin C Meyer", ["ben@meyerhome.net", "ben@webkit.org"]),
-    Committer("Benjamin Otte", ["otte@gnome.org", "otte@webkit.org"]),
-    Committer("Brent Fulgham", "bfulgham@webkit.org"),
-    Committer("Brett Wilson", "brettw@chromium.org"),
-    Committer("Brian Weinstein", "bweinstein@apple.com"),
-    Committer("Cameron McCormack", "cam@webkit.org"),
+    Committer("Andrew Wellington", ["andrew@webkit.org", "proton@wiretapped.net"], "proton"),
+    Committer("Andras Becsi", "abecsi@webkit.org", "bbandix"),
+    Committer("Anthony Ricaud", "rik@webkit.org", "rik"),
+    Committer("Anton Muhin", "antonm@chromium.org", "antonm"),
+    Committer("Antonio Gomes", "tonikitoo@webkit.org", "tonikitoo"),
+    Committer("Ben Murdoch", "benm@google.com", "benm"),
+    Committer("Benjamin C Meyer", ["ben@meyerhome.net", "ben@webkit.org"], "icefox"),
+    Committer("Benjamin Otte", ["otte@gnome.org", "otte@webkit.org"], "otte"),
+    Committer("Brent Fulgham", "bfulgham@webkit.org", "bfulgham"),
+    Committer("Brett Wilson", "brettw@chromium.org", "brettx"),
+    Committer("Brian Weinstein", "bweinstein@apple.com", "bweinstein"),
+    Committer("Cameron McCormack", "cam@webkit.org", "heycam"),
     Committer("Carol Szabo", "carol.szabo@nokia.com"),
     Committer("Chang Shu", "Chang.Shu@nokia.com"),
     Committer("Chris Fleizach", "cfleizach@apple.com"),
-    Committer("Chris Jerdonek", "cjerdonek@webkit.org"),
+    Committer("Chris Jerdonek", "cjerdonek@webkit.org", "cjerdonek"),
     Committer("Chris Marrin", "cmarrin@apple.com"),
-    Committer("Chris Petersen", "cpetersen@apple.com"),
+    Committer("Chris Petersen", "cpetersen@apple.com", "cpetersen"),
     Committer("Christian Dywan", ["christian@twotoasts.de", "christian@webkit.org"]),
     Committer("Collin Jackson", "collinj@webkit.org"),
-    Committer("Csaba Osztrogonac", "ossy@webkit.org"),
-    Committer("David Smith", ["catfish.man@gmail.com", "dsmith@webkit.org"]),
-    Committer("Dean Jackson", "dino@apple.com"),
+    Committer("Csaba Osztrogonac", "ossy@webkit.org", "ossy"),
+    Committer("David Smith", ["catfish.man@gmail.com", "dsmith@webkit.org"], "catfishman"),
+    Committer("Dean Jackson", "dino@apple.com", "dino"),
     Committer("Dirk Pranke", "dpranke@chromium.org"),
-    Committer("Drew Wilson", "atwilson@chromium.org"),
+    Committer("Drew Wilson", "atwilson@chromium.org", "atwilson"),
     Committer("Dumitru Daniliuc", "dumi@chromium.org"),
-    Committer("Eli Fidler", "eli@staikos.net"),
+    Committer("Eli Fidler", "eli@staikos.net", "QBin"),
     Committer("Enrica Casucci", "enrica@apple.com"),
-    Committer("Erik Arvidsson", "arv@chromium.org"),
-    Committer("Eric Roman", "eroman@chromium.org"),
+    Committer("Erik Arvidsson", "arv@chromium.org", "arv"),
+    Committer("Eric Roman", "eroman@chromium.org", "eroman"),
     Committer("Feng Qian", "feng@chromium.org"),
-    Committer("Fumitoshi Ukai", "ukai@chromium.org"),
-    Committer("Gabor Loki", "loki@webkit.org"),
+    Committer("Fumitoshi Ukai", "ukai@chromium.org", "ukai"),
+    Committer("Gabor Loki", "loki@webkit.org", "loki04"),
     Committer("Girish Ramakrishnan", ["girish@forwardbias.in", "ramakrishnan.girish@gmail.com"]),
     Committer("Graham Dennis", ["Graham.Dennis@gmail.com", "gdennis@webkit.org"]),
     Committer("Greg Bolsinga", "bolsinga@apple.com"),
     Committer("Hin-Chung Lam", ["hclam@google.com", "hclam@chromium.org"]),
-    Committer("Jakob Petsovits", ["jpetsovits@rim.com", "jpetso@gmx.at"]),
+    Committer("Jakob Petsovits", ["jpetsovits@rim.com", "jpetso@gmx.at"], "jpetso"),
     Committer("Jakub Wieczorek", "jwieczorek@webkit.org"),
     Committer("James Robinson", ["jamesr@chromium.org", "jamesr@google.com"]),
     Committer("Jens Alfke", ["snej@chromium.org", "jens@apple.com"]),
-    Committer("Jeremy Moskovich", ["playmobil@google.com", "jeremy@chromium.org"]),
+    Committer("Jeremy Moskovich", ["playmobil@google.com", "jeremy@chromium.org"], "jeremymos"),
     Committer("Jessie Berlin", ["jberlin@webkit.org", "jberlin@apple.com"]),
-    Committer("Jian Li", "jianli@chromium.org"),
-    Committer("John Abd-El-Malek", "jam@chromium.org"),
-    Committer("Joost de Valk", ["joost@webkit.org", "webkit-dev@joostdevalk.nl"]),
-    Committer("Joseph Pecoraro", "joepeck@webkit.org"),
-    Committer("Julie Parent", ["jparent@google.com", "jparent@chromium.org"]),
+    Committer("Jian Li", "jianli@chromium.org", "jianli"),
+    Committer("John Abd-El-Malek", "jam@chromium.org", "jam"),
+    Committer("Joost de Valk", ["joost@webkit.org", "webkit-dev@joostdevalk.nl"], "Altha"),
+    Committer("Joseph Pecoraro", "joepeck@webkit.org", "JoePeck"),
+    Committer("Julie Parent", ["jparent@google.com", "jparent@chromium.org"], "jparent"),
     Committer("Julien Chaffraix", ["jchaffraix@webkit.org", "julien.chaffraix@gmail.com"]),
     Committer("Jungshik Shin", "jshin@chromium.org"),
-    Committer("Keishi Hattori", "keishi@webkit.org"),
+    Committer("Keishi Hattori", "keishi@webkit.org", "keishi"),
     Committer("Kelly Norton", "knorton@google.com"),
     Committer("Kenneth Russell", "kbr@google.com"),
-    Committer("Kent Tamura", "tkent@chromium.org"),
+    Committer("Kent Tamura", "tkent@chromium.org", "tkent"),
     Committer("Krzysztof Kowalczyk", "kkowalczyk@gmail.com"),
     Committer("Levi Weintraub", "lweintraub@apple.com"),
     Committer("Mads Ager", "ager@chromium.org"),
     Committer("Matt Lilek", ["webkit@mattlilek.com", "pewtermoose@webkit.org"]),
     Committer("Matt Perry", "mpcomplete@chromium.org"),
     Committer("Maxime Britto", ["maxime.britto@gmail.com", "britto@apple.com"]),
-    Committer("Maxime Simon", ["simon.maxime@gmail.com", "maxime.simon@webkit.org"]),
+    Committer("Maxime Simon", ["simon.maxime@gmail.com", "maxime.simon@webkit.org"], "maxime.simon"),
     Committer("Martin Robinson", ["mrobinson@webkit.org", "martin.james.robinson@gmail.com"]),
-    Committer("Michelangelo De Simone", "michelangelo@webkit.org"),
+    Committer("Michelangelo De Simone", "michelangelo@webkit.org", "michelangelo"),
     Committer("Mike Belshe", ["mbelshe@chromium.org", "mike@belshe.com"]),
-    Committer("Mike Fenton", ["mike.fenton@torchmobile.com", "mifenton@rim.com"]),
+    Committer("Mike Fenton", ["mike.fenton@torchmobile.com", "mifenton@rim.com"], "mfenton"),
     Committer("Mike Thole", ["mthole@mikethole.com", "mthole@apple.com"]),
     Committer("Mikhail Naganov", "mnaganov@chromium.org"),
-    Committer("Ojan Vafai", "ojan@chromium.org"),
-    Committer("Pam Greene", "pam@chromium.org"),
-    Committer("Peter Kasting", ["pkasting@google.com", "pkasting@chromium.org"]),
-    Committer("Philippe Normand", ["pnormand@igalia.com", "philn@webkit.org"]),
-    Committer("Pierre d'Herbemont", ["pdherbemont@free.fr", "pdherbemont@apple.com"]),
-    Committer("Pierre-Olivier Latour", "pol@apple.com"),
+    Committer("Ojan Vafai", "ojan@chromium.org", "ojan"),
+    Committer("Pam Greene", "pam@chromium.org", "pamg"),
+    Committer("Peter Kasting", ["pkasting@google.com", "pkasting@chromium.org"], "pkasting"),
+    Committer("Philippe Normand", ["pnormand@igalia.com", "philn@webkit.org"], "pnormand"),
+    Committer("Pierre d'Herbemont", ["pdherbemont@free.fr", "pdherbemont@apple.com"], "pdherbemont"),
+    Committer("Pierre-Olivier Latour", "pol@apple.com", "pol"),
     Committer("Roland Steiner", "rolandsteiner@chromium.org"),
-    Committer("Ryosuke Niwa", "rniwa@webkit.org"),
-    Committer("Scott Violet", "sky@chromium.org"),
-    Committer("Stephen White", "senorblanco@chromium.org"),
+    Committer("Ryosuke Niwa", "rniwa@webkit.org", "rniwa"),
+    Committer("Scott Violet", "sky@chromium.org", "sky"),
+    Committer("Stephen White", "senorblanco@chromium.org", "senorblanco"),
     Committer("Steve Block", "steveblock@google.com"),
-    Committer("Tony Chang", "tony@chromium.org"),
-    Committer("Trey Matteson", "trey@usa.net"),
+    Committer("Tony Chang", "tony@chromium.org", "tony^work"),
+    Committer("Trey Matteson", "trey@usa.net", "trey"),
     Committer("Tristan O'Tierney", ["tristan@otierney.net", "tristan@apple.com"]),
     Committer("Victor Wang", "victorw@chromium.org"),
-    Committer("William Siegrist", "wsiegrist@apple.com"),
+    Committer("William Siegrist", "wsiegrist@apple.com", "wms"),
     Committer("Yael Aharon", "yael.aharon@nokia.com"),
     Committer("Yaar Schnitman", ["yaar@chromium.org", "yaar@google.com"]),
-    Committer("Yong Li", ["yong.li@torchmobile.com", "yong.li.webkit@gmail.com"]),
+    Committer("Yong Li", ["yong.li@torchmobile.com", "yong.li.webkit@gmail.com"], "yong"),
     Committer("Yongjun Zhang", "yongjun.zhang@nokia.com"),
     Committer("Yury Semikhatsky", "yurys@chromium.org"),
-    Committer("Yuzo Fujishima", "yuzo@google.com"),
-    Committer("Zoltan Herczeg", "zherczeg@webkit.org"),
-    Committer("Zoltan Horvath", "zoltan@webkit.org"),
+    Committer("Yuzo Fujishima", "yuzo@google.com", "yuzo"),
+    Committer("Zoltan Herczeg", "zherczeg@webkit.org", "zherczeg"),
+    Committer("Zoltan Horvath", "zoltan@webkit.org", "zoltan"),
 ]
 
 
